# music

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  setup.cfg  setup.py  tag.sh
.github/: dependabot.yml
.github/workflows/: python-app.yml
music/: __init__.py  __main__.py  codegen.py  render.py  util.py
music/__codegen__/: stats.py
openspec/: README.md
openspec/changes/archive/2026-06-21-clarify-render-timing-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-21-clarify-render-timing-output/specs/render-timing-reporting/: spec.md
openspec/changes/archive/2026-06-21-smooth-render-progress/: design.md  proposal.md
openspec/changes/archive/2026-06-21-smooth-render-progress/specs/render-progress/: spec.md
openspec/changes/archive/2026-06-26-remove-vocal-loudness-worth/: design.md
openspec/changes/archive/2026-06-26-remove-vocal-loudness-worth/specs/render/: spec.md
openspec/changes/clarify-render-timing-output/: tasks.md
openspec/changes/remove-vocal-loudness-worth/: proposal.md  tasks.md
openspec/changes/smooth-render-progress/: design.md  tasks.md
openspec/specs/render/: spec.md
openspec/specs/render-progress/: spec.md
openspec/specs/render-timing-reporting/: spec.md
scripts/: __init__.py  check.py  migrate_drumart_sld.py
src/music/: __init__.py  __main__.py  auth.py  codegen.py  midi.lua  render.py  tag.py  upload.py  util.py
src/music/__codegen__/: stats.py
src/music/codegen/: process.py
src/music/commands/: README.md  __init__.py  codegen.py  render.py  stat.py  tag.py  upload.py
src/music/commands/analyze/: __init__.py  command.py  process.py
src/music/commands/analyze/output/: __init__.py  arcade.py
src/music/commands/analyze/utils/: __init__.py  file_refs.py  plugin_state.py
src/music/commands/analyze/vendors/: __init__.py  sitala.py
src/music/commands/analyze/vendors/cockos/: __init__.py  reasamplomatic5000.py
src/music/commands/analyze/vendors/output/: __init__.py  arcade.py
src/music/commands/analyze/vendors/spitfire/: __init__.py  labs.py
src/music/commands/codegen/: __init__.py  command.py  process.py
src/music/commands/open/: command.py
src/music/commands/path/: __init__.py  command.py
src/music/commands/render/: command.py  consts.py  contextmanagers.py  process.py  progress.py  result.py  tracks.py
src/music/commands/stat/: command.py
src/music/commands/tag/: command.py  process.py
src/music/commands/upload/: __init__.py  command.py  process.py  progress.py
src/music/export/: __init__.py  command.py
src/music/open/: command.py
src/music/render/: __init__.py  command.py  contextmanagers.py  process.py  progress.py  result.py  tracks.py
src/music/stat/: __init__.py  command.py
src/music/tag/: __init__.py  command.py
src/music/upload/: command.py  process.py  progress.py
src/music/utils/: __init__.py  fx.py  http.py  project.py  songversion.py
tests/: conftest.py  test_cli.py  test_render.py  test_stat.py  test_tag.py  test_upload.py  test_util.py
tests/__snapshots__/: test_cli.ambr  test_render.ambr  test_stat.ambr  test_tag.ambr  test_upload.ambr  test_util.ambr
tests/commands/: __init__.py  test_analyze.py  test_stat.py  test_tag.py  test_upload.py
tests/commands/__snapshots__/: test_analyze.ambr  test_tag.ambr  test_upload.ambr
tests/commands/render/: __init__.py  conftest.py  test_progress.py  test_render.py
tests/commands/render/__snapshots__/: test_progress.ambr  test_render.ambr
tests/render/: conftest.py  test_render.py
tests/render/__snapshots__/: test_render.ambr
tests/scripts/: test_check.py  test_migrate_drumart_sld.py
tests/utils/: test_project.py
tests/utils/__snapshots__/: test_project.ambr
