[project]
name = "music"
version = "1.0.0"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "click",
    "openai",
    "python-reapy",
    "rich",
]

[project.optional-dependencies]
testing = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "syrupy",
]

[project.scripts]
music = "music.__main__:cli"

[tool.mypy]
strict = true

[tool.ruff]
extend-exclude = [
    "__codegen__",
]
select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
# E501 - line too long; if Black does its job, I'm not worried about the rare long line
ignore = ["E501"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
addopts = [
  '--cov',
  'src',
  '--cov-report',
  'html',
]
