[project]
name = "music"
version = "1.0.0"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "aiofiles",
    "aiohttp",
    "click",
    "openai",
    "python-reapy",
    "rich",
]

[project.optional-dependencies]
testing = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-socket",
    "ruff",
    "syrupy",
    "types-aiofiles",
]

[project.scripts]
music = "music.__main__:cli"

[tool.mypy]
strict = true

[tool.ruff]
extend-exclude = [
    "__codegen__",
]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
# E501 - line too long; if formatter does its job, I'm not worried about the rare long line
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
addopts = [
  '--cov',
  'src',
  '--cov-report',
  'html',
  '--disable-socket',
]
