[metadata]
name = music
version = 1.0.0
license = UNLICENSED

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True

[options]
install_requires =
    click
    python-reapy

packages = find:

[options.extras_require]
testing =
    black
    mypy
    pre-commit
    pylint

[options.entry_points]
console_scripts =
    music = music.__main__:cli
