[metadata]
name = music
version = 1.0.0
license = UNLICENSED

[options]
install_requires =
    click
    python-reapy

packages = find:

python_requires = >=3.10

[options.extras_require]
testing =
    black
    mypy
    pre-commit
    ruff

ai =
    openai

[options.entry_points]
console_scripts =
    music = music.__main__:cli
